Added screenshots, readme is updated

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,6 +6,7 @@
 :root {
     --plum: #46042a;
     --gold: #8b6512;
+    --hover: #b68722;
     --white: #fff;
     --grey: #c0c0c0;
     --background-color: #46042bea;
@@ -33,6 +34,10 @@ h1 {
     border-radius: 0;
 }
 
+.card {
+    margin: 10px;
+}
+
 .card-header {
     text-align: center;
     background-color: var(--gold);
@@ -53,11 +58,16 @@ h1 {
     padding-right: 10px;
 }
 
+li span{
+    font-weight: 400;
+    color: var(--grey);
+}
+
 li a {
     font-weight: 400;
     color: var(--grey);
 }
 
 li a:hover {
-    color: var(--grey)
+    color: var(--hover)
 }
